prepare for bringing slurm bits over

--- a/src/supervisord/templates/supervisord.conf.tmpl
+++ b/src/supervisord/templates/supervisord.conf.tmpl
@@ -1,7 +1,7 @@
 [inet_http_server]
 port=127.0.0.1:9001
-username=maas
-password=maas
+username=slurm
+password=slurm
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
@@ -13,13 +13,13 @@ pidfile=%(here)s/supervisord.pid
 
 [supervisorctl]
 serverurl=http://localhost:9001
-username=maas
-password=maas
+username=slurm
+password=slurm
 
 {% if ctxt['mode'] in ['slurmdbd', 'all'] %}
 [program:slurmdbd]
 process_name=slurmdbd
-command=%(ENV_SNAP)s/bin/ld-preload %(ENV_SNAP)s/bin/run-postgres
+command=%(ENV_SNAP)s/bin/slurmdbd
 stopasgroup=true
 killasgroup=true
 redirect_stderr=true
@@ -27,7 +27,7 @@ stdout_logfile=%(ENV_SNAP_COMMON)s/log/slurmdbd.log
 
 [program:mysql]
 process_name=mysql
-command=%(ENV_SNAP)s/bin/ld-preload %(ENV_SNAP)s/bin/run-postgres
+command=%(ENV_SNAP)s/bin/start_mysql
 stopasgroup=true
 killasgroup=true
 redirect_stderr=true
@@ -38,7 +38,7 @@ stdout_logfile=%(ENV_SNAP_COMMON)s/log/mysql.log
 {% if ctxt['mode'] in ['slurmd', 'all'] %}
 [program:slurmd]
 process_name=slurmd
-command=%(ENV_SNAP)s/bin/run-regiond
+command=%(ENV_SNAP)s/bin/slurmd
 stopasgroup=true
 killasgroup=true
 redirect_stderr=true
@@ -48,7 +48,7 @@ stdout_logfile=%(ENV_SNAP_COMMON)s/log/slurmd.log
 {% if ctxt['mode'] in ['slurmctld', 'all'] %}
 [program:slurmctld]
 process_name=slurmctld
-command=%(ENV_SNAP)s/bin/run-regiond
+command=%(ENV_SNAP)s/bin/slurmctld
 stopasgroup=true
 killasgroup=true
 redirect_stderr=true
